--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,10 +21,29 @@ build-backend = "uv_build"
 
 [dependency-groups]
 dev = [
-    "pyrefly>=0.44.2",
-    "ruff>=0.14.8",
+    "coverage>=7.13.0",
+    "pyrefly>=0.45.2",
+    "pytest>=9.0.2",
+    "pytest-cov>=7.0.0",
+    "pytest-mock>=3.15.1",
+    "ruff>=0.14.9",
     "ty>=0.0.1a32",
 ]
+
+[tool.coverage.run]
+branch = true
+data_file = ".coverage/.coverage"
+omit = [
+  "*/tests/*",
+  "__main__.py",
+]
+
+[tool.coverage.report]
+show_missing = true
+skip_covered = true
+
+[tool.coverage.xml]
+output = ".coverage/cobertura.xml"
 
 [tool.mypy]
 strict = true
