--- a/ruff.toml
+++ b/ruff.toml
@@ -8,15 +8,20 @@ extend-select = ["D204"]
 ignore = [
     "ANN002", # missing-type-args (for *args)
     "ANN003", # missing-type-kwargs
-    "D100", # undocumented-public-module
-    "D104", # undocumented-public-package
+    "D100", # Missing docstring in public module
+    "D104", # Missing docstring in public package
     # "D202", # blank-line-after-function
     # "D203", # incorrect-blank-line-before-class
     # "D205", # missing-blank-line-after-summary
     # "D211", # blank-line-before-class
     # "D212", # multi-line-summary-first-line
     "D213", # multi-line-summary-second-line
-    "S603", # subprocess-without-shell-equals-true
+    "S603", # `subprocess` call: check for execution of untrusted input
+]
+
+[lint.per-file-ignores]
+"tests/*" = [
+    "S101",   # Use of `assert` detected
 ]
 
 [lint.isort]
