--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ keywords = [
 ]
 
 dependencies = [
+    "docker>=7.1.0",
     "pydantic>=2.12.5",
     "pyyaml>=6.0.3",
     "termcolor>=3.2.0",
@@ -53,8 +54,8 @@ dev = [
     "pytest>=9.0.2",
     "pytest-cov>=7.0.0",
     "pytest-mock>=3.15.1",
-    "ruff>=0.14.9",
-    "ty>=0.0.2",
+    "ruff>=0.14.10",
+    "ty>=0.0.6",
 ]
 
 [tool.coverage.run]
