Fix value not found handling
To do that, it was necessary to:
- Add invalid_result attribute to ConfigFilter
- Refactor ConfigFilter.result validation
- Refactor project._print_version
- Populate all these changes on project.eval_project

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,5 +78,11 @@ output = ".coverage/cobertura.xml"
 [tool.pyrefly]
 python-version = "3.10"
 
+[[tool.pyrefly.sub-config]]
+matches = "tests/**"
+
+[tool.pyrefly.sub-config.errors]
+unnecessary-comparison = false
+
 [tool.pytest_env]
 FORCE_COLOR = "1"
